components/monitoring/prometheus/staging/stone-stg-rh01/poc/mimir/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: appstudio-mimir-poc
  annotations:
    argocd.argoproj.io/sync-wave: "-1"
